--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,4 +11,5 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checko
+      - uses: actions/checkout@v3
+      - uses: taiki-e/create-gh-
