--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,4 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: taiki-e/create-gh-
+      - uses: taiki-e/create-gh-release-action@v1
+        with:
+          changelog
