--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,4 +15,7 @@ jobs:
       - uses: taiki-e/create-gh-release-action@v1
         with:
           changelog: CHANGELOG.md
-          token: ${{ secrets
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+  upload-assets:
+  
