--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,4 +21,5 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: x86_64-unkn
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-lates
