--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,3 +30,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
+          bin: koi
+          token: ${{ s
