Add example to readme

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,4 +31,4 @@ jobs:
       - uses: taiki-e/upload-rust-binary-action@v1
         with:
           bin: koi
-          token: ${{ s
+          token: ${{ secrets.GITHUB_TOKEN }}
