--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [package]
 name = "koios"
-description = "A CLI tool to interact with the ChatGPT API a
+description = "A CLI tool to interact with the ChatGPT API and allow it to run commands on your machine 
