--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
 [package]
 name = "koios"
-description = "A CLI tool to interact with the ChatGPT API and allow it to run commands on your machine 
+description = "A CLI tool to interact with the ChatGPT API and allow it to run commands on your machine to help you out."
+version = "0.1.1"
