--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 readme = "README.md"
 repository = "https://github.com/shivam-sh/koi/"
 license = "MIT"
-categories = ["command-lin
+categories = ["command-line-utilities"]
+
+[[bin]]
+name = "koi"
+pat
