--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ path = "src/main.rs"
 clap = { version = "4.1.11", features = ["derive"] }
 confy = "0.5.1"
 console = "0.15.5"
-eventsource-cl
+eventsource-client = "0.11"
+futures = "0.3"
+inq
