--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ confy = "0.5.1"
 console = "0.15.5"
 eventsource-client = "0.11"
 futures = "0.3"
-inquire = { version = "0.6", features = ["cons
+inquire = { version = "0.6", features = ["console"] }
+serde = { version = "1"
