--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ console = "0.15.5"
 eventsource-client = "0.11"
 futures = "0.3"
 inquire = { version = "0.6", features = ["console"] }
-serde = { version = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "
