--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ eventsource-client = "0.11"
 futures = "0.3"
 inquire = { version = "0.6", features = ["console"] }
 serde = { version = "1", features = ["derive"] }
-serde_json = "
+serde_json = "1.0"
+tokio = { version = "1", features 
